--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lucida Grande", sans-serif, Helvetica, Arial;
+    padding: 52px;
 }
 
+.footer{
+    background-image: url("back.jpg");
+
+}
+
+.footer, p{
+    color: #FFFFFF
+
+}
+
+
 a {
-  color: #00B7FF;
+  color: #0033CC;
+  
+}
+
+.modal-dialog {
+	z-index: 10;
+}
+.modal-backdrop {
+	z-index: 1;
 }
