--- a/views/bubbleGraph.ejs
+++ b/views/bubbleGraph.ejs
@@ -7,10 +7,10 @@
     <h1>Manufacturers with Model Type, Year & Fuel Cost</h1>
 
 	<div id="container" style="height: 400px; min-width: 310px; max-width: 600px; margin: 0 auto"></div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
-	<script type="text/javascript" src="http://code.highcharts.com/highcharts-more.js"></script>
-	<script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+	<script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
+	<script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
 
 
     <script type="text/javascript">
