--- a/views/pieBmw.ejs
+++ b/views/pieBmw.ejs
@@ -6,10 +6,10 @@
 <body>
     <h1>BMW: Drive Type</h1>
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
-    <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>   
+    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>   
 
 
     <script type="text/javascript">
