--- a/public/bmw.ejs
+++ b/public/bmw.ejs
@@ -323,8 +323,8 @@
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
 	        <li class="active"><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class><a href="#tab1" data-toggle="tab">Mileage</a></li>
-            <li class><a href="#tab2" data-toggle="tab">Drive</a></li>
+        	<li class><a href="/barGraph">Mileage</a></li>
+            <li class><a href="/bubbleGraph">Drive</a></li>
             <li><a href="#tab3" data-toggle="tab">Class</a></li>
             <li><a href="#tab4" data-toggle="tab">Compare</a></li>        
         </ul>
