--- a/public/audi.ejs
+++ b/public/audi.ejs
@@ -324,10 +324,10 @@
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
             <li class="active"><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class><a href="/barGraph">Mileage</a></li>
-            <li class><a href="/piegraph/:audi">Drive</a></li>
-            <li><a href="/modelBarGraph/:audi">Class</a></li>
-            <li><a href="/bubbleGraph">Compare</a></li>     
+        	<li class><a href="/barGraph">2015 Ratings</a></li>
+            <li class><a href="/piegraph/:audi">Sales Ratio</a></li>
+            <li><a href="/modelBarGraph/:audi">Compare Models</a></li>
+            <li><a href="/bubbleGraph">Top Rated Cars</a></li>     
         </ul>
         <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
