--- a/public/bmw.ejs
+++ b/public/bmw.ejs
@@ -323,10 +323,10 @@
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
             <li class="active"><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class><a href="/barGraph">Mileage</a></li>
-            <li class><a href="/piegraph/:bmw">Drive</a></li>
-            <li><a href="/modelBarGraph/:bmw">Class</a></li>
-            <li><a href="/bubbleGraph">Compare</a></li> 
+        	<li class><a href="/barGraph">2015 Ratings</a></li>
+            <li class><a href="/piegraph/:bmw">Sales Ratio</a></li>
+            <li><a href="/modelBarGraph/:bmw">Compare Models</a></li>
+            <li><a href="/bubbleGraph">Top Rated Cars</a></li> 
         </ul>
         <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
