update ejs files
update ejs files

--- a/views/pieAudi.ejs
+++ b/views/pieAudi.ejs
@@ -146,4 +146,10 @@
         });
     });
     </script>
-</body></html>
+    <!-- Footer -->
+        <footer class="footer-basic-centered">
+            <p class="footer-company-motto">Work hard, play even harder</p>
+            <p class="footer-company-name">Elite Technologies &copy; 2015</p>
+        </footer>
+</body>
+</html>
