--- a/views/barGraph.ejs
+++ b/views/barGraph.ejs
@@ -117,14 +117,14 @@
                 },
                 series: [{
                     name: 'Premium',
-                    data: [10,20,30]
+                    data: [<%= output1[0][2].total_products%>, <%= output1[1][3].total_products%>, <%= output1[2][4].total_products%>]
                 }, {
                     name: 'Electricity',
-                    data: [40,50,60]
+                    data: [<%= output1[0][0].total_products%>, <%= output1[1][0].total_products%>, <%= output1[2][2].total_products%>]
                 }, {
                     name: 'Diesel',
-                    data: [70,60,50]
-                }] 
+                    data: [<%= output1[0][1].total_products%>, <%= output1[1][1].total_products%>, <%= output1[2][3].total_products%>]
+                }]
             });
         });  
         
