--- a/views/bubbleGraph.ejs
+++ b/views/bubbleGraph.ejs
@@ -163,4 +163,12 @@
     });
         
     </script>
-</body></html>
+    <!-- Footer -->
+        <footer class="footer-basic-centered">
+
+            <p class="footer-company-motto">Work hard, play even harder</p>
+            <p class="footer-company-name">Elite Technologies &copy; 2015</p>
+
+        </footer>
+</body>
+</html>
