update ejs files
update ejs files

--- a/views/bubbleGraph.ejs
+++ b/views/bubbleGraph.ejs
@@ -29,7 +29,6 @@
       }
 	  
     </style>
-    <title>Car Manufacturers</title>
     
 </head>
 <body>
@@ -70,11 +69,11 @@
     <div class="container" style="width:auto" align="center" role="tabpanel">
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
-	        <li class><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class="active"><a href="/barGraph">2015 Ratings</a></li>
-            <li class><a href="/piegraph/:mercedes">Sales Ratio</a></li>
+	        <li><a href="#tab0" data-toggle="tab">About</a></li>
+        	<li><a href="/barGraph">2015 Ratings</a></li>
+            <li><a href="/piegraph/:mercedes">Sales Ratio</a></li>
             <li><a href="/modelBarGraph/:mercedes">Compare Models</a></li>
-            <li><a href="/bubbleGraph">Top Rated Cars</a></li>        
+            <li class="active"><a href="/bubbleGraph">Top Rated Cars</a></li>        
         </ul>
         <div class="tab-content">
         	<div class="tab-pane active">
