--- a/views/pieAudi.ejs
+++ b/views/pieAudi.ejs
@@ -29,7 +29,6 @@
       }
 	  
     </style>
-    <title>Car Manufacturers</title>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -69,10 +68,10 @@
     <div class="container" style="width:auto" align="center" role="tabpanel">
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
-	        <li class><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class="active"><a href="/barGraph">2015 Ratings</a></li>
-            <li class><a href="/piegraph/:mercedes">Sales Ratio</a></li>
-            <li><a href="/modelBarGraph/:mercedes">Compare Models</a></li>
+	        <li><a href="#tab0" data-toggle="tab">About</a></li>
+        	<li><a href="/barGraph">2015 Ratings</a></li>
+            <li class="active"><a href="/piegraph/:audi">Sales Ratio</a></li>
+            <li><a href="/modelBarGraph/:audi">Compare Models</a></li>
             <li><a href="/bubbleGraph">Top Rated Cars</a></li>        
         </ul>
         <div class="tab-content">
