--- a/public/mercedes.ejs
+++ b/public/mercedes.ejs
@@ -321,8 +321,8 @@
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
 	        <li class="active"><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li class><a href="/barGraph">2015 Ratings</a></li>
-            <li class><a href="/piegraph/:mercedes">Sales Ratio</a></li>
+        	<li><a href="/barGraph">2015 Ratings</a></li>
+            <li><a href="/piegraph/:mercedes">Sales Ratio</a></li>
             <li><a href="/modelBarGraph/:mercedes">Compare Models</a></li>
             <li><a href="/bubbleGraph">Top Rated Cars</a></li>        
         </ul>
