--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Elite Technologies</a>
+                <a class="navbar-brand" href="/">Elite Technologies</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -281,6 +281,15 @@
 
             <p class="footer-company-name">Elite Technologies &copy; 2015</p>
 
+		<div class="col-2">
+              <br>
+              	<li><iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/follow_button.html?screen_name=sjsu" style="width:300px; height:20px;"></iframe></li>
+                <li>
+                <div class="fb-like" data-href="https://www.facebook.com/pages/Elite-Technologies/347771035432176" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                </li>
+              </ul>
+            </div>
+            
         </footer>
 
 
@@ -297,6 +306,16 @@
         interval: 5000 //changes the speed
     })
     </script>
+    
+    <div id="fb-root"></div>
+	<script>(function(d, s, id) {
+  		var js, fjs = d.getElementsByTagName(s)[0];
+  		if (d.getElementById(id)) return;
+  			js = d.createElement(s); js.id = id;
+  		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 
 </body>
 
