--- a/views/bubbleGraph.ejs
+++ b/views/bubbleGraph.ejs
@@ -1,79 +1,20 @@
 <!DOCTYPE HTML><html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Elite Technologies</title>
-
-    <link href="css/modern-business.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="css/footer-basic-centered.css">
-
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    
-    <style>
-      .navbar{
-        padding: 0px;
-        margin: 0px;
-      }
-      #mainCarousel{
-        padding:0px;
-        margin:0px;
-        width:100%;
-        height:100%;
-      }
-	  
-    </style>
-    
+    <% include head.ejs%>
 </head>
+
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a style="font-size:2em;" class="navbar-brand" href="index.html">Elite Technologies</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="index.html#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="index.html#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="index.html#contacts">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#collapseExample" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">Feedback</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-    <img style="margin-bottom:10px; align-self:center" class="active visible-lg img-responsive" src="images/mercedes.jpg" />
+    <% include header.ejs%>
+    <img style="margin-bottom:10px; align-self:center" class="active visible-lg img-responsive" src=<%= output2%> />
     <div class="container" style="width:auto" align="center" role="tabpanel">
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
-	        <li><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li><a href="/barGraph">2015 Ratings</a></li>
-            <li><a href="/piegraph/:mercedes">Sales Ratio</a></li>
-            <li><a href="/modelBarGraph/:mercedes">Compare Models</a></li>
-            <li class="active"><a href="/bubbleGraph">Top Rated Cars</a></li>        
+	        <li><a href="#">About</a></li>
+        	<li><a id="bar" href="#">2015 Ratings</a></li>
+            <li><a id="pie" href="#">Sales Ratio</a></li>
+            <li><a id="model" href="#">Compare Models</a></li>
+            <li class="active"><a id="bubble" href="#">Top Rated Cars</a></li>   
+                
         </ul>
         <div class="tab-content">
         	<div class="tab-pane active">
@@ -84,11 +25,7 @@
 	</div><!---end tabbable -->
     </div><!-- end container -->
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-	<script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
-	<script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
-
+   
     <script type="text/javascript">
     $(function () {
         $('#container').highcharts({
@@ -106,7 +43,7 @@
                 bubble: {
                     dataLabels: {
                         enabled: true,
-                        style: { textShadow: 'none' },
+                        style: { textShadow: 'none'},
                         formatter: function() {
                             return this.point.name;
                         }
@@ -115,7 +52,7 @@
                     maxSize: '30%'
                 }
             },
-    	
+            
             series: [
                 { 
                     name: 'Mercedes',
@@ -123,11 +60,11 @@
                     data: [
                        { name: '<%= merc[0]._id.VClass%>', x: <%= merc[0]._id.fuelCost08%>, y: <%= merc[0]._id.year%>, z: <%= merc[0].total_products%>}, 
                        { name: '<%= merc[1]._id.VClass%>', x: <%= merc[1]._id.fuelCost08%>, y: <%= merc[1]._id.year%>, z: <%= merc[1].total_products%>}, 
-                       { name: '<%= merc[2]._id.VClass%>', x: <%= merc[2]._id.fuelCost08%>, y: <%= merc[2]._id.year%>, z: <%= merc[2].total_products%>},
+                     //  { name: '<%= merc[2]._id.VClass%>', x: <%= merc[2]._id.fuelCost08%>, y: <%= merc[2]._id.year%>, z: <%= merc[2].total_products%>},
                        { name: '<%= merc[3]._id.VClass%>', x: <%= merc[3]._id.fuelCost08%>, y: <%= merc[3]._id.year%>, z: <%= merc[3].total_products%>},
-                       { name: '<%= merc[4]._id.VClass%>', x: <%= merc[4]._id.fuelCost08%>, y: <%= merc[4]._id.year%>, z: <%= merc[4].total_products%>},
+                     //  { name: '<%= merc[4]._id.VClass%>', x: <%= merc[4]._id.fuelCost08%>, y: <%= merc[4]._id.year%>, z: <%= merc[4].total_products%>},
                        { name: '<%= merc[5]._id.VClass%>', x: <%= merc[5]._id.fuelCost08%>, y: <%= merc[5]._id.year%>, z: <%= merc[5].total_products%>},
-                       { name: '<%= merc[6]._id.VClass%>', x: <%= merc[6]._id.fuelCost08%>, y: <%= merc[6]._id.year%>, z: <%= merc[6].total_products%>}
+                      // { name: '<%= merc[6]._id.VClass%>', x: <%= merc[6]._id.fuelCost08%>, y: <%= merc[6]._id.year%>, z: <%= merc[6].total_products%>}
                     ]
                 },
                 { 
@@ -136,11 +73,11 @@
                     data: [
                        { name: '<%= audi[0]._id.VClass%>', x: <%= audi[0]._id.fuelCost08%>, y: <%= audi[0]._id.year%>, z: <%= audi[0].total_products%>}, 
                        { name: '<%= audi[1]._id.VClass%>', x: <%= audi[1]._id.fuelCost08%>, y: <%= audi[1]._id.year%>, z: <%= audi[1].total_products%>}, 
-                       { name: '<%= audi[2]._id.VClass%>', x: <%= audi[2]._id.fuelCost08%>, y: <%= audi[2]._id.year%>, z: <%= audi[2].total_products%>},
+                      // { name: '<%= audi[2]._id.VClass%>', x: <%= audi[2]._id.fuelCost08%>, y: <%= audi[2]._id.year%>, z: <%= audi[2].total_products%>},
                        { name: '<%= audi[3]._id.VClass%>', x: <%= audi[3]._id.fuelCost08%>, y: <%= audi[3]._id.year%>, z: <%= audi[3].total_products%>},
-                       { name: '<%= audi[4]._id.VClass%>', x: <%= audi[4]._id.fuelCost08%>, y: <%= audi[4]._id.year%>, z: <%= audi[4].total_products%>},
+                      // { name: '<%= audi[4]._id.VClass%>', x: <%= audi[4]._id.fuelCost08%>, y: <%= audi[4]._id.year%>, z: <%= audi[4].total_products%>},
                        { name: '<%= audi[5]._id.VClass%>', x: <%= audi[5]._id.fuelCost08%>, y: <%= audi[5]._id.year%>, z: <%= audi[5].total_products%>},
-                       { name: '<%= audi[6]._id.VClass%>', x: <%= audi[6]._id.fuelCost08%>, y: <%= audi[6]._id.year%>, z: <%= audi[6].total_products%>}
+                       //{ name: '<%= audi[6]._id.VClass%>', x: <%= audi[6]._id.fuelCost08%>, y: <%= audi[6]._id.year%>, z: <%= audi[6].total_products%>}
                     ]
                 },
                 { 
@@ -149,11 +86,11 @@
                     data: [
                        { name: '<%= bmw[0]._id.VClass%>', x: <%= bmw[0]._id.fuelCost08%>, y: <%= bmw[0]._id.year%>, z: <%= bmw[0].total_products%>}, 
                        { name: '<%= bmw[1]._id.VClass%>', x: <%= bmw[1]._id.fuelCost08%>, y: <%= bmw[1]._id.year%>, z: <%= bmw[1].total_products%>}, 
-                       { name: '<%= bmw[2]._id.VClass%>', x: <%= bmw[2]._id.fuelCost08%>, y: <%= bmw[2]._id.year%>, z: <%= bmw[2].total_products%>},
+                      // { name: '<%= bmw[2]._id.VClass%>', x: <%= bmw[2]._id.fuelCost08%>, y: <%= bmw[2]._id.year%>, z: <%= bmw[2].total_products%>},
                        { name: '<%= bmw[3]._id.VClass%>', x: <%= bmw[3]._id.fuelCost08%>, y: <%= bmw[3]._id.year%>, z: <%= bmw[3].total_products%>},
-                       { name: '<%= bmw[4]._id.VClass%>', x: <%= bmw[4]._id.fuelCost08%>, y: <%= bmw[4]._id.year%>, z: <%= bmw[4].total_products%>},
+                      // { name: '<%= bmw[4]._id.VClass%>', x: <%= bmw[4]._id.fuelCost08%>, y: <%= bmw[4]._id.year%>, z: <%= bmw[4].total_products%>},
                        { name: '<%= bmw[5]._id.VClass%>', x: <%= bmw[5]._id.fuelCost08%>, y: <%= bmw[5]._id.year%>, z: <%= bmw[5].total_products%>},
-                       { name: '<%= bmw[6]._id.VClass%>', x: <%= bmw[6]._id.fuelCost08%>, y: <%= bmw[6]._id.year%>, z: <%= bmw[6].total_products%>}
+                       //{ name: '<%= bmw[6]._id.VClass%>', x: <%= bmw[6]._id.fuelCost08%>, y: <%= bmw[6]._id.year%>, z: <%= bmw[6].total_products%>}
                     ]
                 }
             ]            	
@@ -162,12 +99,6 @@
     });
         
     </script>
-    <!-- Footer -->
-        <footer class="footer-basic-centered">
-
-            <p class="footer-company-motto">Work hard, play even harder</p>
-            <p class="footer-company-name">Elite Technologies &copy; 2015</p>
-
-        </footer>
+    <% include footer.ejs%>
 </body>
 </html>
