--- a/views/mercedes.ejs
+++ b/views/mercedes.ejs
@@ -1,47 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Elite Technologies</title>
-
-    <link href="css/modern-business.css" rel="stylesheet">
-    <!-- Bootstrap -->
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <style>
-      .navbar{
-        padding: 0px;
-        margin: 0px;
-      }
-      #mainCarousel{
-        padding:0px;
-        margin:0px;
-        width:100%;
-        height:100%;
-      }
-	  
-    </style>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="js/jquery-2.1.3.js" type="text/javascript"> </script>
-    <script src="js/jquery-2.1.3.min.js" type="text/javascript"> </script>
-    <script src="js/bootstrap.min.js" type="text/javascript"> </script>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="js/highcharts.js"></script>
-    <script src="js/highcharts-more.js"></script>
-    <script src="js/exporting.js"></script>
-    <script src="js/script.js" type="text/javascript"> </script>
+    <% include head.ejs%>
+   
     <script type="text/javascript">
+    
     $(function () {
 
     $('#container1').highcharts({
@@ -280,52 +243,12 @@
 
 
 <body>
+<% include header.ejs%>
+ <img style="margin-bottom:10px; align-self:center" class="active visible-lg img-responsive" src="/../images/mercedes.jpg" />
     
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a style="font-size:2em;" class="navbar-brand" href="index.html">Elite Technologies</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="index.html#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="index.html#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="index.html#contacts">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#collapseExample" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">Feedback</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+<% include midder.ejs%>	
 
-    
-    <img style="margin-bottom:10px; align-self:center" class="active visible-lg img-responsive" src="images/mercedes.jpg" />
-    <div class="container" style="width:auto" align="center" role="tabpanel">
-	<div class="tabbable">
-		<ul class="nav nav-pills nav-justified">
-	        <li class="active"><a href="#tab0" data-toggle="tab">About</a></li>
-        	<li><a href="/barGraph">2015 Ratings</a></li>
-            <li><a href="/piegraph/:mercedes">Sales Ratio</a></li>
-            <li><a href="/modelBarGraph/:mercedes">Compare Models</a></li>
-            <li><a href="/bubbleGraph">Top Rated Cars</a></li>        
-        </ul>
+
         <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
       			<h4 class="bg-primary" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif"> Mercedes. <small class="bg-primary" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif">The best or nothing</small> </h4>
@@ -339,4 +262,7 @@ The name first appeared in 1926 under Daimler-Benz, but traces its origins to Da
         </div><!-- end tab-content -->
 	</div><!---end tabbable -->
     </div><!-- end container -->
+
+<% include footer.ejs%>
+	
 </body>
