fixed about tab

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -33,6 +33,10 @@
     var temp4 = document.getElementById('pie');
     temp4.setAttribute('href', url4);
     
+    var url5 = company;
+    var temp5 = document.getElementById('abt');
+    temp5.setAttribute('href', url5);
+    
     </script>
     
     <div id="fb-root"></div>
