--- a/views/pieBmw.ejs
+++ b/views/pieBmw.ejs
@@ -8,7 +8,7 @@
     <div class="container" style="width:auto" align="center" role="tabpanel">
 	<div class="tabbable">
 		<ul class="nav nav-pills nav-justified">
-	        <li><a href="#">About</a></li>
+	        <li><a href="/" id="abt">About</a></li>
         	<li><a id="bar" href="#">2015 Ratings</a></li>
             <li class="active"><a id="pie" href="#">Sales Ratio</a></li>
             <li><a id="model" href="#">Compare Models</a></li>
