Implement sankey graph
Implement sankey graph

--- a/views/barGraph.ejs
+++ b/views/barGraph.ejs
@@ -12,6 +12,7 @@
         	<li class="active"><a id="bar" href="/barGraph">2015 Ratings</a></li>
             <li><a id="pie" href="#">Sales Ratio</a></li>
             <li><a id="model" href="#">Compare Models</a></li>
+            <li><a id="sankey" href="#">Over Years</a></li>
             <li><a id="bubble" href="#">Top Rated Cars</a></li>        
         </ul>
         <div class="tab-content">
