--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -33,9 +33,13 @@
     var temp4 = document.getElementById('pie');
     temp4.setAttribute('href', url4);
     
-    var url5 = company;
-    var temp5 = document.getElementById('abt');
+    var url5 = company + "/sankeyGraph";
+    var temp5 = document.getElementById('sankey');
     temp5.setAttribute('href', url5);
+    
+    var url6 = company;
+    var temp6 = document.getElementById('abt');
+    temp6.setAttribute('href', url6);
     
     </script>
     
