--- a/views/pieAudi.ejs
+++ b/views/pieAudi.ejs
@@ -12,6 +12,7 @@
         	<li><a id="bar" href="#">2015 Ratings</a></li>
             <li class="active"><a id="pie" href="#">Sales Ratio</a></li>
             <li><a id="model" href="#">Compare Models</a></li>
+            <li><a id="sankey" href="#">Over Years</a></li>
             <li><a id="bubble" href="#">Top Rated Cars</a></li>   
      
         </ul>
