--- a/views/index.html
+++ b/views/index.html
@@ -118,8 +118,8 @@
                         <h4 style="color:white; font-size:1.5em;"> Mercedes</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="/mercedes" class="btn btn-default">Learn More</a>
+                        <p>Mercedes-Benz is a German automobile manufacturer, a multinational division of the German manufacturer Daimler AG. The brand is used for luxury automobiles, buses, coaches, and trucks. Founded in 1926.</p>
+                        <a href="/mercedes" class="btn btn-default">Click Me!</a>
                     </div>
                 </div>
             </div>
@@ -129,8 +129,8 @@
                         <h4 style="color:white; font-size:1.5em;">BMW</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="/bmw" class="btn btn-default">Learn More</a>
+                        <p>Bayerische Motoren Werke AG, commonly known as BMW or BMW AG, is a German automobile, motorcycle and engine manufacturing company founded in 1916. BMW is headquartered in Munich, Bavaria, Germany.</p>
+                        <a href="/bmw" class="btn btn-default">Click Me!</a>
                     </div>
                 </div>
             </div>
@@ -140,8 +140,8 @@
                         <h4 style="color:white; font-size:1.5em;">Audi</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="/audi" class="btn btn-default">Learn More</a>
+                        <p>Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury automobiles. Audi oversees worldwide operations from its headquarters in Ingolstadt, Bavaria, Germany. Founded in 1909.</p>
+                        <a href="/audi" class="btn btn-default">Click Me!</a>
                     </div>
                 </div>
             </div>
@@ -154,9 +154,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">We've got what premium brand car lovers need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Start digging into details of your favorite premium car brand with pretty charts displayed using historical data! This will help you car enthusiasts know your brand better.</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
@@ -178,29 +178,29 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box"> 
                         <span class="glyphicon glyphicon-wrench"></span>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Sales Ratio</h3>
+                        <p class="text-muted">Our pieGraphs shows the ratio of drive types sold for the premium brands!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <span class="glyphicon glyphicon-fullscreen"></span>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Over Years</h3>
+                        <p class="text-muted">Sankey graphs shows the drive types released by the premuim brands in last 5 years!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box"> 
                         <span class="glyphicon glyphicon-send"></span>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Up to Date Ratings</h3>
+                        <p class="text-muted">Premuims cars sold based on what they run on reflected by Bas Graphs!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <span class="glyphicon glyphicon-console"></span> 
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Your Options</h3>
+                        <p class="text-muted">Bar graph represents the different type of models by these premium brands.</p>
                     </div>
                 </div>
             </div>
@@ -283,9 +283,11 @@
 
 		<div class="col-2">
               <br>
-              	<li><iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/follow_button.html?screen_name=sjsu" style="width:300px; height:20px;"></iframe></li>
+              	<li style="margin-left:90px;"><iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/follow_button.html?screen_name=sjsu" style="width:300px; height:20px;"></iframe></li>
+               
+               <br> 
                 <li>
-                <div class="fb-like" data-href="https://www.facebook.com/pages/Elite-Technologies/347771035432176" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                <div style="margin-left:250px;" class="fb-like" data-href="https://www.facebook.com/pages/Elite-Technologies/347771035432176" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                 </li>
               </ul>
             </div>
