--- a/views/index.html
+++ b/views/index.html
@@ -52,13 +52,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contacts">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#collapseExample" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">Feedback</a>
+                        <a class="page-scroll" href="#contacts">Team</a>
                     </li>
                 </ul>
             </div>
@@ -66,6 +63,7 @@
         </div>
         <!-- /.container -->
     </nav>
+
 
     <div class="collapse container" id="collapseExample">
 
@@ -267,7 +265,7 @@
         <!-- Footer -->
         <footer class="footer-basic-centered">
 
-            <p class="footer-company-motto">Work hard, play even harder</p>
+            <p class="footer-company-motto">Work hard, play harder</p>
 
             <p class="footer-links">
                 <a href="#">Home</a>
