brand description edited on brand pages

--- a/views/audi.ejs
+++ b/views/audi.ejs
@@ -250,10 +250,14 @@
     
     <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
-      			<h4 class="bg-danger" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif"> Audi. <small class="bg-danger" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif">Advancement through Technology</small> </h4>
-                <p class="bg-info" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; text-align:justify" > Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury automobiles. Audi oversees worldwide operations from its headquarters in Ingolstadt, Bavaria, Germany. Audi-branded vehicles are produced in nine production facilities worldwide.
+      			<div class="jumbotron">
+      			<h1 style="margin-top:-30px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; padding-top:-20px"> Audi. </h1>
+                <h3 style="margin-top:-10px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif">Advancement through Technology</h3>
+                 <p style="font-size:16px; font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; margin-bottom:-20px" > Audi AG is a German automobile manufacturer that designs, engineers, produces, markets and distributes luxury automobiles. Audi oversees worldwide operations from its headquarters in Ingolstadt, Bavaria, Germany. Audi-branded vehicles are produced in nine production facilities worldwide.
 Audi has been a majority owned (99.55%) subsidiary of Volkswagen Group since 1966, following a phased purchase of Audi AG's predecessor, Auto Union, from Daimler-Benz. Volkswagen relaunched the Audi brand with the 1965 introduction of the Audi F103 series.
 The company name is based on the Latin translation of the surname of the founder, August Horch. "Horch", meaning "listen" in German, becomes "audi" in Latin. The four rings of the Audi logo each represent one of four car companies that banded together to create Audi's predecessor company, Auto Union. Audi's slogan is Vorsprung durch Technik, meaning "Advancement through Technology". However, since 2007 Audi USA has used the slogan "Truth in Engineering". Audi is a member of the "German Big 3" luxury automakers, along with BMW and Mercedes-Benz, which are the three best-selling luxury automakers in the world.</p>
+                </div>
+            
                 <fieldset style="min-width:350px; max-width:650px; height:350px;">
                 <div id="container1" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
                 <div id="container2" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
