--- a/views/bmw.ejs
+++ b/views/bmw.ejs
@@ -250,9 +250,12 @@
     
     <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
-      			<h4 class="bg-success" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif"> BMW. <small class="bg-success" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif">The Ultimate Driving Machine</small> </h4>
-                <p class="bg-warning" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; text-align:justify" > Bayerische Motoren Werke AG (English: Bavarian Motor Works), commonly known as BMW or BMW AG, is a German automobile, motorcycle and engine manufacturing company founded in 1916.
+      			 <div class="jumbotron">
+      			<h1 style="margin-top:-30px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; padding-top:-20px"> BMW. </h1>
+                <h3 style="margin-top:-10px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif">The Ultimate Driving Machine</h3>
+                 <p style="font-size:16px; font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; margin-bottom:-20px" > Bayerische Motoren Werke AG (English: Bavarian Motor Works), commonly known as BMW or BMW AG, is a German automobile, motorcycle and engine manufacturing company founded in 1916.
 BMW is headquartered in Munich, Bavaria. It also owns and produces Mini cars, and is the parent company of Rolls-Royce Motor Cars. BMW produces motorcycles under BMW Motorrad. In 2014, the BMW Group produced 2,117,965 automobiles and approximately 120,000 motorcycles across all of its brands. BMW is part of the "German Big 3" luxury automakers, along with Audi and Mercedes-Benz, which are the three best-selling luxury automakers in the world.</p>
+                </div>
                 <fieldset style="min-width:350px; max-width:650px; height:350px;">
                 <div id="container1" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
                 <div id="container2" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
