--- a/views/mercedes.ejs
+++ b/views/mercedes.ejs
@@ -251,9 +251,14 @@
 
         <div class="tab-content">
         	<div class="tab-pane active" id="tab0">
-      			<h4 class="bg-primary" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif"> Mercedes. <small class="bg-primary" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif">The best or nothing</small> </h4>
-                <p class="bg-success" style="font-family:'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; text-align:justify" > Mercedes-Benz is a German automobile manufacturer, a multinational division of the German manufacturer Daimler AG. The brand is used for luxury automobiles, buses, coaches, and trucks. The headquarters of Mercedes-Benz is in Stuttgart, Baden-Württemberg, Germany.
+      			<div class="jumbotron">
+      			<h1 style="margin-top:-30px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; padding-top:-20px"> Mercedes. </h1>
+                <h3 style="margin-top:-10px;font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif">The best or nothing</h3>
+                 <p style="font-size:16px; font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, sans-serif; margin-bottom:-20px" > Mercedes-Benz is a German automobile manufacturer, a multinational division of the German manufacturer Daimler AG. The brand is used for luxury automobiles, buses, coaches, and trucks. The headquarters of Mercedes-Benz is in Stuttgart, Baden-Württemberg, Germany.
 The name first appeared in 1926 under Daimler-Benz, but traces its origins to Daimler-Motoren-Gesellschaft's 1901 Mercedes and to Karl Benz's 1886 Benz Patent-Motorwagen, which is widely regarded as the first gasoline powered automobile. Mercedes-Benz's slogan is "Das Beste oder nichts". Mercedes-Benz is part of the "German Big 3" luxury automakers, along with Audi and BMW, which are the best-selling luxury automakers in the world.</p>
+                </div>
+                
+            
                 <fieldset style="min-width:350px; max-width:650px; height:350px;">
                 <div id="container1" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
                 <div id="container2" style="min-width: 310px; max-width: 400px; height: 300px; display: block;float: left;"></div>
