--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Welcome to Elite Technologies - World of Car Analytics - where we give you car specific insights for some of the world's best cars.">
+    <meta name="author" content="Elite Technologies">
 
     <title>Elite Technologies - Great cars, greater insights</title>
 
