--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Find various informational car performance analytics which will help you choose your dream car amongst the best cars."
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elite Technologies - Car specific performance information</title>
